--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-    "name": "jqrs-server",
+    "name": "cohort-server",
     "version": "0.0.1",
-    "description": "Server for Jacqueries iOS app",
+    "description": "Server for Cohort-based iOS apps",
     "author": "Jacob Niedzwiecki <jake@jacob-n.com>",
+    "engines": {
+      "node": "0.10.29"
+    },
     "dependencies": {
     	"express": "4.x",
         "nanotimer": "~0.3.1",
         "cors": "2.7.x"
     },
+
     "repository": {
     	"type": "git",
     	"url": "https://github.com/jakemoves/jqrs-server.git"
