--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "2.7.x",
     "express": "4.x",
+    "body-parser": "~1.18",
     "moment": "^2.11.2",
     "nanotimer": "~0.3.1",
     "nedb": "^1.7.4"
